--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                 <a class="nav-link" href="#">FAQ</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Forum</a>
+                <a class="nav-link" href="form.html">Forum</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">Become a Provider</a>
